--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@headlessui/react": "^2.2.2",
     "@prisma/client": "^6.7.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
